[tool.poetry]
name = "xaolao"
version = "0.1.0"
description = "Convert Sound on Cloud"
authors = ["KhanhIceTea <khanhicetea@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.0"
pydub = "^0.25.1"
uvicorn = "^0.15.0"
aiofiles = "^0.7.0"
requests = "^2.26.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
